[project]
name = "lightemporal"
version = "0.0.1"
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]


[tool.setuptools]
packages = ["lightemporal", "test_app"]

[project.entry-points.task_discovers]
tasks = "lightemporal.tasks.discovery:discover"

[project.entry-points.tasks]
test_app = "test_app.test_task"
